--- a/dockerfile-master
+++ b/dockerfile-master
@@ -13,6 +13,12 @@ ENV DEBIAN_FRONTEND=noninteractive
 RUN apt -y install salt-master salt-minion salt-ssh salt-cloud salt-api telnet iputils-ping \
     # Configure the master to auto accept minion public keys
     && sed 's/#auto_accept: False/auto_accept: True/' /etc/salt/master > /etc/salt/master.tmp \
-    && mv /etc/salt/master.tmp /etc/salt/master
+    && mv /etc/salt/master.tmp /etc/salt/master \
+    # Update the master hostname in /etc/salt/minion to allow calling salt-call inside the master node 
+    && sed 's/#master: salt/master: master/' /etc/salt/minion > /etc/salt/minion.tmp \
+    && mv /etc/salt/minion.tmp /etc/salt/minion
     
 CMD [ "/usr/bin/salt-master" , "-l" , "debug" ]
+
+# Start a minion daemon in the master node to allow calling the salt-call
+RUN salt-minion -l debug -d
