--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,16 +14,22 @@ services:
     hostname: minion1
     build:
       context: .
-      dockerfile: dockerfile-minion
+      dockerfile: ubuntu-minion
   minion2:
     container_name: minion2
     hostname: minion2
     build:
       context: .
-      dockerfile: dockerfile-minion
+      dockerfile: ubuntu-minion
   minion3:
     container_name: minion3
     hostname: minion3
     build:
       context: .
-      dockerfile: dockerfile-minion
+      dockerfile: centos-minion
+  minion4:
+    container_name: minion4
+    hostname: minion4
+    build:
+      context: .
+      dockerfile: centos-minion
